kubernetes/apps/observability/grafana/instance/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  hostnames:
    - "grafana.${SECRET_DOMAIN}"
    - "grafana.${EXT_SECRET_DOMAIN}"
  parentRefs:
    - name: kgateway-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
